Implement temporary links
