# delivery/http/router.go
@@ -11,6 +11,7 @@ func newRouter(contr controller) http.Handler {
 	router.POST("/api/albums/", contr.handleAlbum())
 	router.GET("/api/albums/:album/ready/", contr.handleReady())
 	router.GET("/api/albums/:album/pair/", contr.handlePair())
+	router.GET("/api/images/:token/", contr.handleImage())
 	router.PATCH("/api/albums/:album/vote/", contr.handleVote())
 	router.GET("/api/albums/:album/top/", contr.handleTop())
 	return router
